--- a/Visualization/templates/a2.html
+++ b/Visualization/templates/a2.html
@@ -125,7 +125,7 @@ console.log(locs);
   function loadScript() {
     var script = document.createElement('script');
     script.type = 'text/javascript';
-    script.src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyAuRbLDzCk46GZI1att2K8Yfo7gXcUQAZA&v=3.exp&' + 'callback=initialize';
+    script.src = 'https://maps.googleapis.com/maps/api/js?key=ADD THE GOOGLE MAP API KEY HERE&v=3.exp&' + 'callback=initialize';
     document.body.appendChild(script);
   }
 
